cqlite-kits-builtin: revise D1 — wire connector via Helm values not kubectl patch (PR #859 feedback)